--- a/index.html
+++ b/index.html
@@ -17,28 +17,28 @@
     <!-- Header-->
     <header id="masterheader">
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-                    <a class="navbar-brand" href="#">MAP Navbar</a>
+                    <a class="navbar-brand" href="index.html" id="logo">Martín A Palacios</a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                     
-                        <span class="navbar-toggler-icon"></span>
+                    <span class="navbar-toggler-icon"></span>
                     </button>
                     
                     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                       <div class="navbar-nav">
-                        <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
-                        <a class="nav-item nav-link" href="#">Exhibits</a>
-                        <a class="nav-item nav-link" href="#">MAP Pricing</a>
+                        <a class="nav-item nav-link" href="index.html">About<span class="sr-only">(current)</span></a>
+                        <a class="nav-item nav-link" href="portfolio.html">Portfolio</a>
+                        <a class="nav-item nav-link" href="contact.html">Contact</a>
                       </div>
                     </div>
             </nav>
 
-        <div class="container">
+        <!--<div class="container">
             <a href="index.html" id="logo">Martín A Palacios</a>
             <div class="links">
                 <a href="index.html">About</a>
                 <a href="portfolio.html">Portfolio</a>
                 <a href="contact.html">Contact</a>
-            </div>
+            </div>-->
         </div>
     </header>
 
